main/default/objects/Connect_Configurator__c/Connect_Configurator__c.object-meta.xml
<CustomObject>
    <label>Connect Configurator</label>
    <nameField>
        <label>Connect Configurator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connect Configurator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>