main/default/objects/Connect_Configurator__c/fields/Appointments_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Appointments_Page_Title__c</fullName>
    <label>Appointments Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>