main/default/objects/Connect_Configurator__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Connect Configurator</relationshipLabel>
    <relationshipName>Connect_Configurator</relationshipName>
    <type>Lookup</type>
</CustomField>