main/default/objects/Connect_Configurator__c/fields/Connect_Page_URL2__c.field-meta.xml
<CustomField>
    <fullName>Connect_Page_URL2__c</fullName>
    <label>Connect Page URL</label>
    <type>Url</type>
</CustomField>