main/default/objects/Connect_Configurator__c/fields/Connect_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Connect_Page_URL__c</fullName>
    <formula>IF( Active__c , SUBSTITUTE(
           LEFT($Api.Partner_Server_URL_260,FIND(&quot;/services&quot;, $Api.Partner_Server_URL_530)),
           &apos;salesforce.com/&apos;,
           &apos;site.com/&apos;
) + &apos;Connect/s/user-page?configId=&apos;+ Id , &apos;&apos;)</formula>
    <label>Connect Page URL</label>
    <type>Text</type>
</CustomField>