main/default/objects/Connect_Configurator__c/fields/Connect_Pages__c.field-meta.xml
<CustomField>
    <fullName>Connect_Pages__c</fullName>
    <label>Connect Pages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Appointments Page</fullName>
            </value>
            <value>
                <fullName>Provider Page</fullName>
            </value>
            <value>
                <fullName>Profile Page</fullName>
            </value>
            <value>
                <fullName>FAQs Page</fullName>
            </value>
            <value>
                <fullName>Reminder Page</fullName>
                <isActive>false</isActive>
                <label>Reminder Page</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>