main/default/objects/Connect_Configurator__c/fields/Connect_Type__c.field-meta.xml
<CustomField>
    <fullName>Connect_Type__c</fullName>
    <label>Connect Type.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VirtuVisit</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>