main/default/objects/Connect_Configurator__c/fields/Connect_Widgets__c.field-meta.xml
<CustomField>
    <fullName>Connect_Widgets__c</fullName>
    <label>Connect Widgets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation Team</fullName>
            </value>
            <value>
                <fullName>Consultation Schedule</fullName>
            </value>
            <value>
                <fullName>My Medication</fullName>
            </value>
            <value>
                <fullName>Health Summary</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>Support Team</fullName>
            </value>
            <value>
                <fullName>Support Schedule</fullName>
            </value>
            <value>
                <fullName>My Tickets</fullName>
            </value>
            <value>
                <fullName>My Files</fullName>
                <isActive>false</isActive>
                <label>My Files</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>