main/default/objects/Connect_Configurator__c/fields/Consultation_Schedule_Widget_Icon__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Schedule_Widget_Icon__c</fullName>
    <label>Consultation Schedule Widget Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>