main/default/objects/Connect_Configurator__c/fields/Consultation_Team_Widget_Label__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Team_Widget_Label__c</fullName>
    <label>Consultation Team Widget Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>