main/default/objects/Connect_Configurator__c/fields/FAQ_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Page_Title__c</fullName>
    <label>FAQ Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>