main/default/objects/Connect_Configurator__c/fields/File_Upload__c.field-meta.xml
<CustomField>
    <fullName>File_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Upload</label>
    <type>Checkbox</type>
</CustomField>