main/default/objects/Connect_Configurator__c/fields/Files_Widget_Icon__c.field-meta.xml
<CustomField>
    <fullName>Files_Widget_Icon__c</fullName>
    <label>Files Widget Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>