main/default/objects/Connect_Configurator__c/fields/Files_Widget_Label__c.field-meta.xml
<CustomField>
    <fullName>Files_Widget_Label__c</fullName>
    <label>Files Widget Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>