main/default/objects/Connect_Configurator__c/fields/Footer_Image__c.field-meta.xml
<CustomField>
    <fullName>Footer_Image__c</fullName>
    <label>Footer Image</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>