main/default/objects/Connect_Configurator__c/fields/Health_Summary_Widget_Label__c.field-meta.xml
<CustomField>
    <fullName>Health_Summary_Widget_Label__c</fullName>
    <label>Health Summary Widget Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>