main/default/objects/Connect_Configurator__c/fields/Hero_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image_URL__c</fullName>
    <label>Hero Image URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>