main/default/objects/Connect_Configurator__c/fields/My_Tickets_Widget_Icon__c.field-meta.xml
<CustomField>
    <fullName>My_Tickets_Widget_Icon__c</fullName>
    <label>My Tickets Widget Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>