main/default/objects/Connect_Configurator__c/fields/My_Tickets_Widget_Label__c.field-meta.xml
<CustomField>
    <fullName>My_Tickets_Widget_Label__c</fullName>
    <label>My Tickets Widget Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>