main/default/objects/Connect_Configurator__c/fields/Profile_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Profile_Page_Title__c</fullName>
    <label>Profile Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>