main/default/objects/Connect_Configurator__c/fields/Provider_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Provider_Page_Title__c</fullName>
    <label>Provider Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>