main/default/objects/Connect_Configurator__c/fields/Reminder_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Page_Title__c</fullName>
    <label>Reminder Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>