main/default/objects/Connect_Configurator__c/fields/Support_Schedule_Wdiget_Label__c.field-meta.xml
<CustomField>
    <fullName>Support_Schedule_Wdiget_Label__c</fullName>
    <label>Support Schedule Wdiget Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>