main/default/objects/Connect_Configurator__c/fields/Support_Team_Widget_Icon__c.field-meta.xml
<CustomField>
    <fullName>Support_Team_Widget_Icon__c</fullName>
    <label>Support Team Widget Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>