main/default/objects/Connect_Configurator__c/fields/Support_Team_Widget_Label__c.field-meta.xml
<CustomField>
    <fullName>Support_Team_Widget_Label__c</fullName>
    <label>Support Team Widget Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>