main/default/objects/Connect_Configurator__c/fields/Widget_Layout__c.field-meta.xml
<CustomField>
    <fullName>Widget_Layout__c</fullName>
    <label>Widget Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>